--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -10,7 +10,7 @@
     <div class="cssDependencie">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="geral.css">
+        <link rel="stylesheet" th:href="@{css/geral.css}">
     </div>
 </head>
 
@@ -93,6 +93,7 @@
 
     <div class="jsDependencie">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="@{js/cache.js}"></script>
     </div>
 
 </body>
