--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -11,10 +11,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" th:href="@{css/geral.css}">
+        <link rel="stylesheet" th:href="@{css/paginaPrincipal.css}">
+
     </div>
 </head>
 
 <body>
+    <div th:fragment="barraSuperior" class="barraSuperior"></div>
+
+
+
+
     <div th:fragment="barraLateral" class="barraLateral">
 
         <!-- Botão para abrir a barra lateral -->
@@ -93,16 +100,16 @@
 
     <div class="criarConta">
         <h1 id="tituloCriar">Crie sua conta agora mesmo</h1>
-
-
-
-        <a th:href="@{/conta/cadastro/{id}(id=2)}" style="padding: 20px; border: solid 2px #CCC;">login</a>
-        <a th:href="@{/conta/cadastro/{id}(id=1)}" style="padding: 20px; border: solid 2px #CCC;">Cadastre-se</a>
+        <div style="display: flex; flex-direction: row; gap: 30px;">
+            <a th:href="@{/conta/cadastro/{id}(id=2)}" class="btn-login">Login</a>
+            <a th:href="@{/conta/cadastro/{id}(id=1)}" class="btn-cadastro">Cadastre-se</a>
+        </div>
     </div>
+    
 
     <div th:fragment="jsDependencie" class="jsDependencie">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="@{js/cache.js}"></script>
+        <script th:src="@{js/cache.js}"></script>
     </div>
 
 </body>
