Barra superior + tela de login

--- a/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
+++ b/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div th:insert="~{/geral :: barraLateral}"></div>
+    <div th:insert="~{/geral :: barraSuperior}"></div>
 
     <div class="containerEscolha">
 
