--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -1,117 +1,178 @@
 <!DOCTYPE html>
 
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org/">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fragmentos</title>
 
     <div th:fragment="cssDependencie" class="cssDependencie">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" th:href="@{css/geral.css}">
-        <link rel="stylesheet" th:href="@{css/paginaPrincipal.css}">
-
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+      />
+      <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        rel="stylesheet"
+      />
+      <link rel="stylesheet" th:href="@{css/geral.css}" />
+      <link rel="stylesheet" th:href="@{css/paginaPrincipal.css}" />
     </div>
-</head>
+  </head>
 
-<body>
-    <div th:fragment="barraSuperior" class="barraSuperior"></div>
+  <body>
+    <div th:fragment="barraSuperior" class="barraSuperior">
+      <a href="/home"><img th:src="@{/images/logo.png}" alt="Logo" /></a>
 
 
 
-
-    <div th:fragment="barraLateral" class="barraLateral">
-
+      <div th:fragment="barraLateral" class="barraLateral">
         <!-- Botão para abrir a barra lateral -->
-        <button class="btn btn-primary mt-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" style="margin: 50px;"
-            aria-controls="sidebar">
-            <i class="fas fa-bars"></i> <!-- Menu -->
+        <button
+          class="btn btn-primary mt-3"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#sidebar"
+          style="margin: 50px"
+          aria-controls="sidebar"
+        >
+          <i class="fas fa-bars"></i>
+          <!-- Menu -->
         </button>
 
         <!-- Barra lateral -->
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="sidebarLabel">Menu Lateral</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <div
+          class="offcanvas offcanvas-start"
+          tabindex="-1"
+          id="sidebar"
+          aria-labelledby="sidebarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebarLabel">Menu Lateral</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="list-group">
+              <a href="/home" class="list-group-item">
+                <span><i class="fas fa-home"></i> Home</span>
+              </a>
+              <a href="#" class="list-group-item">
+                <span><i class="fas fa-user"></i> Meu perfil</span>
+              </a>
+              <a href="/pagamento" class="list-group-item">
+                <span><i class="fas fa-dollar-sign"></i> Pagamento</span>
+              </a>
+              <a href="#" class="list-group-item">
+                <span><i class="fas fa-file-alt"></i> Extrato</span>
+              </a>
+              <a href="#" class="list-group-item">
+                <span><i class="fas fa-users"></i> Contato</span>
+              </a>
+              <a href="#" class="list-group-item">
+                <span><i class="fas fa-cogs"></i> Configurações</span>
+              </a>
+            </ul>
+
+            <!-- Ícones das redes sociais -->
+            <div class="social-icons mt-3">
+              <!-- Facebook -->
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #3b5998"
+              >
+                <i class="fab fa-facebook"></i>
+              </a>
+
+              <!-- Twitter -->
+              <a
+                href="https://www.twitter.com"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #1da1f2"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+
+              <!-- Instagram -->
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #e4405f"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+
+              <!-- LinkedIn -->
+              <a
+                href="https://www.linkedin.com"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #0077b5"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+
+              <!-- YouTube -->
+              <a
+                href="https://www.youtube.com"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #ff0000"
+              >
+                <i class="fab fa-youtube"></i>
+              </a>
+
+              <!-- GitHub -->
+              <a
+                href="https://github.com/William-Colasso/Sistema-Bancario-Adapter.git"
+                target="_blank"
+                class="social-icon mx-2"
+                style="font-size: 30px; color: #181717"
+              >
+                <i class="fab fa-github"></i>
+              </a>
             </div>
-            <div class="offcanvas-body">
-                <ul class="list-group">
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-home"></i> Home</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-user"></i> Meu perfil</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-dollar-sign"></i> Pagamento</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-file-alt"></i> Extrato</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-users"></i> Contato</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <span><i class="fas fa-cogs"></i> Configurações</span>
-                    </a>
-                </ul>
+          </div>
 
-                <!-- Ícones das redes sociais -->
-                <div class="social-icons mt-3">
-                    <!-- Facebook -->
-                    <a href="https://www.facebook.com" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #3b5998;">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                
-                    <!-- Twitter -->
-                    <a href="https://www.twitter.com" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #1DA1F2;">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                
-                    <!-- Instagram -->
-                    <a href="https://www.instagram.com" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #E4405F;">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                
-                    <!-- LinkedIn -->
-                    <a href="https://www.linkedin.com" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #0077B5;">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                
-                    <!-- YouTube -->
-                    <a href="https://www.youtube.com" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #FF0000;">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                
-                    <!-- GitHub -->
-                    <a href="https://github.com/William-Colasso/Sistema-Bancario-Adapter.git" target="_blank" class="social-icon mx-2" style="font-size: 30px; color: #181717;">
-                        <i class="fab fa-github"></i>
-                    </a>
-                </div>
-                
-            </div>
-
-            <div style="width: 100%; height: 5px;background-color: gray;opacity: 0.5;margin-top:25px ;margin-bottom: 25px;"></div>
-
+          <div
+            style="
+              width: 100%;
+              height: 5px;
+              background-color: gray;
+              opacity: 0.5;
+              margin-top: 25px;
+              margin-bottom: 25px;
+            "
+          ></div>
         </div>
+      </div>
+
     </div>
 
-    <div class="criarConta">
+    <div style="display: flex; flex-direction: row; height: 100%; width: 100%">
+      
+      <div class="criarConta">
         <h1 id="tituloCriar">Crie sua conta agora mesmo</h1>
-        <div style="display: flex; flex-direction: row; gap: 30px;">
-            <a th:href="@{/conta/cadastro/{id}(id=2)}" class="btn-login">Login</a>
-            <a th:href="@{/conta/cadastro/{id}(id=1)}" class="btn-cadastro">Cadastre-se</a>
+        <div style="display: flex; flex-direction: row; gap: 30px">
+          <a th:href="@{conta/cadastro/{id}(id=2)}" class="btn-login">Login</a>
+          <a th:href="@{conta/cadastro/{id}(id=1)}" class="btn-cadastro"
+            >Cadastre-se</a
+          >
         </div>
+      </div>
     </div>
-    
 
     <div th:fragment="jsDependencie" class="jsDependencie">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script th:src="@{js/cache.js}"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script th:src="@{js/cache.js}"></script>
     </div>
-
-</body>
-
+  </body>
 </html>
