--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -22,7 +22,7 @@
 
   <body>
     <div th:fragment="barraSuperior" class="barraSuperior">
-      <a href="/home"><img th:src="@{/images/logo.png}" alt="Logo" /></a>
+      <a th:href="@{/home}"><img th:src="@{/images/logo.png}" alt="Logo" /></a>
 
 
 
