--- a/app_adapter/src/main/resources/templates/pagamento/pagar.html
+++ b/app_adapter/src/main/resources/templates/pagamento/pagar.html
@@ -19,6 +19,13 @@
 <body>
     <div th:insert="~{/geral :: barraSuperior}"></div>
    
+    <div class="containerPag">
+
+        
+
+
+
+    </div>
 
 
     
