--- a/app_adapter/src/main/resources/templates/conta/cadastro.html
+++ b/app_adapter/src/main/resources/templates/conta/cadastro.html
@@ -114,71 +114,72 @@
 <body>
     <div class="form-container">
         <h1>Cadastro de Cliente</h1>
-        <form action="/clientes" method="POST">
+        <form action="/clientes" method="POST" th:object="{cliente}">
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+                <input th:field="nome" type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
             </div>
             <div class="form-group">
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required pattern="\d{11}">
+                <input th:field="*{cpf}" type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required pattern="\d{11}">
                 <p class="small-text">Apenas números, sem pontos ou traços.</p>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Digite seu email" required>
+                <input th:field="email" type="email" id="email" name="email" placeholder="Digite seu email" required>
             </div>
             <div class="form-group">
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone" required pattern="\d{10,11}">
+                <input th:field="telefone" type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone" required pattern="\d{10,11}">
                 <p class="small-text">Inclua o DDD, apenas números.</p>
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required minlength="8">
+                <input th:field="senha" type="password" id="senha" name="senha" placeholder="Digite sua senha" required minlength="8">
                 <p class="small-text">Mínimo de 8 caracteres.</p>
             </div>
             <button type="submit" class="btn">Cadastrar</button>
-            <div class="form-footer">
+            <div th:fragment="login-button">
+                <!-- Botão "Já tem uma conta? Faça login" -->
                 <p>Já tem uma conta? 
-                    <button type="button" class="btn-login" data-bs-toggle="modal" data-bs-target="#loginModal">
+                    <button type="button" class="btn btn-link p-0 text-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
                         Faça login
-                    </button> .
+                    </button>.
                 </p>
+        
+                <!-- Modal de Login -->
+                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="/login" method="POST">
+                                    <div class="form-group">
+                                        <label for="cpf-email-select">CPF ou Email</label>
+                                        <select id="cpf-email-select" name="tipo-login" class="form-control form-select form-select-sm" required>
+                                            <option value="cpf">CPF</option>
+                                            <option value="email">Email</option>
+                                        </select>
+                                        <input type="text" id="cpf-email" name="login" class="form-control mt-2" placeholder="Digite seu CPF" required>
+                                    </div>
+                                    <div class="form-group mt-3">
+                                        <label for="senha-login">Senha</label>
+                                        <input type="password" id="senha-login" name="senha" class="form-control" placeholder="Digite sua senha" required>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary mt-3 w-100">Entrar</button>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </form>
-    </div>
-
-    <!-- Modal de Login -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form action="/login" method="POST">
-                        <div class="form-group">
-                            <label for="cpf-email-select">CPF ou Email</label>
-                            <select id="cpf-email-select" class="form-control form-select form-select-sm" required>
-                                <option value="cpf">CPF</option>
-                                <option value="email">Email</option>
-                            </select>
-                            <input type="text" id="cpf-email" name="cpf-email" class="form-control" placeholder="Digite seu CPF ou Email" required>
-                        </div>
-                        <div class="form-group mt-3">
-                            <label for="senha-login">Senha</label>
-                            <input type="password" id="senha-login" name="senha" class="form-control" placeholder="Digite sua senha" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary mt-3 w-100">Entrar</button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- Bootstrap JS -->
