COISA PRA CARAMBA

--- a/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
+++ b/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
@@ -17,7 +17,7 @@
     <div class="containerEscolha">
 
 
-        <a th:href="@{pagamento}" class="linkPagamento">
+        <a th:href="@{pagamento/pagar}" class="linkPagamento">
             <div class="inicioPagamento">
                 <i class="fas fa-dollar-sign"></i>
                 <p>Pagamento</p>
