--- a/app_adapter/src/main/resources/templates/conta/cadastro.html
+++ b/app_adapter/src/main/resources/templates/conta/cadastro.html
@@ -19,6 +19,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            display: flex;
+            overflow: hidden;
         }
 
         .form-container {
@@ -27,6 +29,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 100%;
+            height: 80%;
             max-width: 500px;
         }
 
@@ -77,13 +80,14 @@
         }
 
         .btn-login {
-            color: #007bff;
+            color: #FFF;
             text-decoration: none;
             padding: 0;
             border: none;
             background: none;
             font-size: 1rem;
             cursor: pointer;
+
         }
 
         .btn-login:hover {
@@ -104,9 +108,17 @@
         }
 
         .form-control.form-select.form-select-sm {
-            font-size: 0.875rem; /* Tamanho da fonte menor */
-            padding: 0.375rem 0.75rem; /* Menos preenchimento */
-            height: auto; /* Ajusta a altura */
+            font-size: 0.875rem;
+            /* Tamanho da fonte menor */
+            padding: 0.375rem 0.75rem;
+            /* Menos preenchimento */
+            height: auto;
+            /* Ajusta a altura */
+        }
+
+        #loginCad {
+            background-color: white;
+            color: #0056b3;
         }
     </style>
 </head>
@@ -114,72 +126,77 @@
 <body>
     <div class="form-container">
         <h1>Cadastro de Cliente</h1>
-        <form action="/clientes" method="POST" th:object="{cliente}">
+        <form th:action="@{/clientes}" method="POST" th:object="${cliente}">
+            <input type="number" th:field="*{saldo}" hidden value="0.0">
+
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input th:field="nome" type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+                <input th:field="*{nome}" type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
             </div>
             <div class="form-group">
-                <label for="cpf">CPF</label>
-                <input th:field="*{cpf}" type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required pattern="\d{11}">
-                <p class="small-text">Apenas números, sem pontos ou traços.</p>
+                <label for="cpf-email">CPF</label>
+                <input th:field="*{cpf}"  type="text" id="cpf-email" name="cpf-email" placeholder="Digite seu CPF" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input th:field="email" type="email" id="email" name="email" placeholder="Digite seu email" required>
+                <input th:field="*{email}" type="email" id="email" name="email" placeholder="Digite seu email" required>
             </div>
             <div class="form-group">
                 <label for="telefone">Telefone</label>
-                <input th:field="telefone" type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone" required pattern="\d{10,11}">
+                <input th:field="*{telefone}" type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone"
+                    required pattern="\d{10,11}">
                 <p class="small-text">Inclua o DDD, apenas números.</p>
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input th:field="senha" type="password" id="senha" name="senha" placeholder="Digite sua senha" required minlength="8">
+                <input th:field="*{senha}" type="password" id="senha" name="senha" placeholder="Digite sua senha"
+                    required minlength="8">
                 <p class="small-text">Mínimo de 8 caracteres.</p>
             </div>
-            <button type="submit" class="btn">Cadastrar</button>
-            <div th:fragment="login-button">
-                <!-- Botão "Já tem uma conta? Faça login" -->
-                <p>Já tem uma conta? 
-                    <button type="button" class="btn btn-link p-0 text-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
-                        Faça login
-                    </button>.
-                </p>
-        
-                <!-- Modal de Login -->
-                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form action="/login" method="POST">
-                                    <div class="form-group">
-                                        <label for="cpf-email-select">CPF ou Email</label>
-                                        <select id="cpf-email-select" name="tipo-login" class="form-control form-select form-select-sm" required>
-                                            <option value="cpf">CPF</option>
-                                            <option value="email">Email</option>
-                                        </select>
-                                        <input type="text" id="cpf-email" name="login" class="form-control mt-2" placeholder="Digite seu CPF" required>
-                                    </div>
-                                    <div class="form-group mt-3">
-                                        <label for="senha-login">Senha</label>
-                                        <input type="password" id="senha-login" name="senha" class="form-control" placeholder="Digite sua senha" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary mt-3 w-100">Entrar</button>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                            </div>
+            <button  type="submit" class="btn">Cadastrar</button>
+
+        </form>
+
+        <div th:fragment="login-button">
+            <!-- Botão "Já tem uma conta? Faça login" -->
+            <p>Já tem uma conta?
+                <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
+                    data-bs-target="#loginModal">
+                    Faça login
+                </button>
+            </p>
+
+            <!-- Modal de Login -->
+            <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="/login" method="POST">
+                                <div class="form-group">                         
+                                    <input type="text" id="identificador" name="identificador" class="form-control mt-2"
+                                        placeholder="Digite seu Email" required>
+                                </div>
+                                <div class="form-group mt-3">
+                                    <label for="senha-login">Senha</label>
+                                    <input type="password" id="senha-login" name="senha" class="form-control"
+                                        placeholder="Digite sua senha" required>
+                                </div>
+                                <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
+                                data-bs-target="#loginModal" onclick="realizarLogin()">Faça login</button>
+                            
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
@@ -188,16 +205,19 @@
     <!-- Máscara de CPF e E-mail no Modal -->
     <script>
         $(document).ready(function () {
+
             var input = $('#cpf-email');
             var select = $('#cpf-email-select');
-            
+
+
+
             // Aplica a máscara de CPF inicialmente
             input.mask('000.000.000-00', { placeholder: '_._._-__' });
 
             // Detecta mudança no select e aplica a máscara ou libera o input
-            select.change(function() {
+            select.change(function () {
                 var selectedOption = select.val();
-                
+
                 if (selectedOption === 'cpf') {
                     input.mask('000.000.000-00');  // Aplica a máscara de CPF
                     input.val('');  // Limpa o valor caso tenha sido digitado um e-mail
@@ -217,8 +237,19 @@
                     input.mask('000.000.000-00');
                 }
             });
+
+            
         });
+
+
+
+
     </script>
+
+
+
+<script th:src="@{/js/login.js}"></script>
+<script th:src="@{/js/cache.js}"></script>
 </body>
 
 </html>
