--- a/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
+++ b/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
@@ -24,7 +24,7 @@
             </div>
         </a>
         
-        <a href="" class="linkPerfil">
+        <a th:href="@{/meuPerfil}" class="linkPerfil">
             <div class="inicioPerfil">
                 <i class="fas fa-user"></i><p>Meu perfil</p>
             </div>
