--- a/app_adapter/src/main/resources/templates/banco/pagar.html
+++ b/app_adapter/src/main/resources/templates/banco/pagar.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org/">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagamento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -59,9 +63,30 @@
             margin-right: 20px;
         }
     </style>
+    <link rel="stylesheet" th:href="@{/css/geral.css}" />
+    <link rel="stylesheet" th:href="@{/css/paginaPrincipal.css}" />
 </head>
 
 <body>
+
+
+
+    <div th:insert="~{/geral :: barraSuperior}"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="container">
         <h3 class="mb-4">Realizar Pagamento</h3>
@@ -138,6 +163,10 @@
 
     </script>
 
+   
+    <script th:src="@{/js/login.js}"></script>
+    <script th:src="@{/js/cache.js}"></script>
+    <div th:insert="~{/geral :: jsDependencie}"></div>
 </body>
 
 </html>
