--- a/app_adapter/src/main/resources/static/css/perfil.css
+++ b/app_adapter/src/main/resources/static/css/perfil.css
@@ -1,20 +1,18 @@
-body,html{
-    margin: 0;
-    padding: 0;
-    display: flex;
 
-    justify-items: center;
+*{
+    user-select: none;
+}
+
+
+.imagePerfil{
+    width: 15vw;
+    height: 15vw;
+    display: flex;
+    border-radius: 100%;
+    border: #ccc solid 5px;
+    contain: content;
+    align-items: center;
+    justify-content: center;
 
 }
 
-.containerPerfil{
-    margin-top: 5vh;
-    width: 50vw;
-    height: 70vh;
-    display: flex;
-    background-color: aliceblue;
-    border: solid #CCC 2px;
-    border-radius: 4px ;
-    box-shadow:  4px 4px 4px 4px rgba(0 , 0 ,0, 0.5);
-    align-self: center;
-}
