--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -40,7 +40,7 @@
             <a href="/home" class="list-group-item">
               <span><i class="fas fa-home"></i> Home</span>
             </a>
-            <a href="#" class="list-group-item">
+            <a th:href="@{/meuPerfil}" class="list-group-item">
               <span><i class="fas fa-user"></i> Meu perfil</span>
             </a>
             <a href="/pagar" class="list-group-item">
