--- a/app_adapter/src/main/resources/templates/banco/pagar.html
+++ b/app_adapter/src/main/resources/templates/banco/pagar.html
@@ -109,7 +109,7 @@
         <!-- Valor e Email -->
         <div class="value-email-container">
             <label for="valor" class="form-label">Valor</label>
-            <input type="number" id="valor" class="form-control" placeholder="Digite o valor do pagamento">
+            <input type="number" id="valor" class="form-control" placeholder="Digite o valor do pagamento" min="0">
 
             <label for="emailDestino" class="form-label" style="margin-top: 15px;">Email de Destino</label>
             <input type="email" id="emailDestino" class="form-control" placeholder="Digite o email do destinatário">
