--- a/app_adapter/src/main/resources/templates/geral.html
+++ b/app_adapter/src/main/resources/templates/geral.html
@@ -43,7 +43,7 @@
             <a th:href="@{/meuPerfil}" class="list-group-item">
               <span><i class="fas fa-user"></i> Meu perfil</span>
             </a>
-            <a th:href="@{pagamento/pagar}" class="list-group-item">
+            <a href="/pagamento/pagar" class="list-group-item">
               <span><i class="fas fa-dollar-sign"></i> Pagamento</span>
             </a>
             <a href="#" class="list-group-item">
