--- a/app_adapter/src/main/resources/templates/banco/pagar.html
+++ b/app_adapter/src/main/resources/templates/banco/pagar.html
@@ -146,13 +146,16 @@
 
             fetch('/pagamento/processar', {
                 method: 'POST',
-                headers: {'Content-Type':'application/x-www-form-urlencoded'},
+                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                 body: payload.toString()
             })
                 .then(response => response.json())
                 .then(data => {
                     if (data.success) {
                         alert(data.message);
+                        // Limpar os campos após o pagamento ser realizado
+                        document.getElementById('valor').value = '';
+                        document.getElementById('emailDestino').value = '';
                     } else {
                         alert(`Erro: ${data.message}`);
                     }
